# philentropy

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
.github/workflows/: python.yml
R/: RcppExports.R  cross_distance.R  distance.R  gower_mixed.R  utils.R
inst/include/: philentropy_RcppExports.h
man/: cross_distance.Rd  dist_many_many.Rd  dist_one_many.Rd  distance.Rd  gower_mixed.Rd
py/: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyvenv.cfg  requirements-dev.txt  setup.py
py/examples/: basic_usage.py  threading_example.py
py/philentropy/: __init__.py  core.py
py/tests/: __init__.py  conftest.py  generate_reference_data.R  test_philentropy.py
py/tests/data/: distance_euclidean.csv
py/tests/py/tests/data/: dist_one_many_manhattan.csv  dist_one_one_hellinger.txt  distance_counts_empirical.csv  distance_kullback.csv
src/: InformationTheory.h  Makevars  RcppExports.cpp  common_utils.h  correlation.h  dist_dispatch.h  dist_functions.cpp  dist_interface.cpp  dist_interface.h  dist_matrix.cpp  distance_matrix.cpp  distances.h  distances_rcpp.cpp  gower_internal.h  gower_mixed.cpp  gower_parallel.h  python_bindings.cpp  rcpp_utils.h  utils.cpp  utils.h  utils_rcpp.cpp
tests/testthat/: test-cross-distance.R  test-dist-gower_mixed.R
